kubernetes/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator-deployment
  namespace: mega
  labels:
    app: load-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
        - name: load-generator
          image: biprob/microservices-project-load-generator:latest-finalbb
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
